// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages should compile index for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/package-1 v1.0.0** • Readme \\| [API](packages.md)

***

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • [Readme](index.md) \\| API

***

# packages-example

## Packages

- [@scope/package-1 - v1.0.0](@scope/package-1/index.md)
- [package-1b](package-1b/index.md)
- [package-2 - v1.0.0](package-2/index.md)
- [@scope/package-3](@scope/package-3/index.md)
- [package-4](package-4/index.md)
- [package-5](package-5/package-5.md)
- [package-6](package-6.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**@scope/package-1 v1.0.0** • [Readme](index.md) \\| API

***

[packages-example](../../index.md) / @scope/package-1

# @scope/package-1

Comments for package-1

Some more comments for package-1

## Interfaces

- [PackageInterface](interfaces/PackageInterface.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 3`] = `
"**package-2 v1.0.0** • [Readme](index.md) \\| API

***

[packages-example](../index.md) / package-2

# package-2

## Modules

- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile member for relative entry module package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-6** • API

***

[packages-example](../../../index.md) / [package-6](../../../package-6.md) / [module1](../../../package-6.md) / PackageInterface1

# Interface: PackageInterface1
"
`;

exports[`Packages should compile member page for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/package-1 v1.0.0** • [Readme](../README.md) \\| [API](../packages.md)

***

[@scope/package-1 v1.0.0](../README.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/package-1 v1.0.0** • [Readme](../index.md) \\| [API](../globals.md)

***

[packages-example](../../../index.md) / [@scope/package-1](../index.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"**@scope/package-1 v1.0.0** • API

***

[packages-example v0.0](../../index.md) / [@scope/package-1](../index.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • Readme \\| [API](packages.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**@scope/package-1 v1.0.0** • Readme \\| [API](globals.md)

***

[packages-example](../../index.md) / @scope/package-1

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"**packages-example v0.0** • API

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## Packages

| Package | Version | Description |
| :------ | :------ | :------ |
| [@scope/package-1](package-1/index.md) | 1.0.0 | Description for package-1 |
| [package-1b](package-1b/index.md) | - | - |
| [package-2](package-2/index.md) | 1.0.0 | - |
| [@scope/package-3](package-3/index.md) | - | Description for package 3 |
| [package-4](package-4/index.md) | - | - |
| [package-5](package-5/package-5.md) | - | - |
| [package-6](package-6.md) | - | - |
"
`;

exports[`Packages should compile relative entry module package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-6** • API

***

[packages-example](index.md) / [package-6](package-6.md) / module1

# module1

## Index

### Interfaces

- [PackageInterface1](package-6/module1/interfaces/PackageInterface1.md)
"
`;
